Fix #336 Invisible sidebar titles

--- a/viewer/viewer.css
+++ b/viewer/viewer.css
@@ -1473,7 +1473,7 @@ html[dir='rtl'] .outlineItem > .outlineItems {
   height: auto;
   margin-bottom: 1px;
   border-radius: 2px;
-  color: hsla(0,0%,100%,.8);
+  color: #333;
   font-size: 13px;
   line-height: 15px;
   -moz-user-select: none;
@@ -1548,7 +1548,7 @@ html[dir='rtl'] .outlineItemToggler::before {
               0 0 1px hsla(0,0%,100%,.2) inset,
               0 0 1px hsla(0,0%,0%,.2);
   border-radius: 2px;
-  color: hsla(0,0%,100%,.9);
+  color: black;
 }
 
 .outlineItem.selected {
